Modified jest.config.js to jest.config.ts. Added resources.md file

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "args": [
               "${fileBasenameNoExtension}",
               "--config",
-              "jest.config.js"
+              "jest.config.ts"
             ],
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
